--- a/backend/src/templates/index.html
+++ b/backend/src/templates/index.html
@@ -1,21 +1,37 @@
-<!DOCTYPE html>
-<html lang="us">
-  <head>
+<!doctype html>
+<html lang="en">
+
+<head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>trade_app | {{ data.title }}</title>
-    <!-- Custom styles for this template-->
-    <link href="/static/css/mycss.css" rel="stylesheet">
-  </head>
-  <body>
-    <img src="/static/docker_flask.png" />
-    <p>Added task to queue default:{{data.task_param}}</p>
-    <p>Tasks in queue:{{data.queue_count}}</p>
-    <p>Completed tasks:{{data.completed}}</p>
-<p><a href="/finished_tasks">Completed tasks:{{data.completed}}</a></p>	
-    <form action="{{ url_for("index_func")}}" method="post">
-      <label>Task Parameter:</label>
-      <input type="text" id="task_parameter" name="task_param" placeholder="Task Parameter">
-      <button type="submit">submit</button>
-  </body>
+    <title>index</title>
+</head>
+
+<link rel="stylesheet" href="/static/css/index.css">
+<link rel="stylesheet" href="/static/css/calendar.css">
+<body>
+  <div class="flex-container">
+    <main class="main">
+       <div id="calendar"></div>
+    </main>
+    <nav id="sidebar">
+
+      <ul>
+        <li><a onclick="collapse_sidebar()"><i class="fa fa-bars"></i><span>Hide</span><tooltip class="is-collapsed">Expand</tooltip></a></li>
+        <li><a href="#topic-3"><i class="fa fa-th"></i><span>Dashboards</span><tooltip class="is-collapsed">Dashboards</tooltip></a></li>
+        <li><a href="#topic-3"><i class="fa fa-signal"></i><span>Statistics</span><tooltip class="is-collapsed">Statistics</tooltip></a></li>
+        <li><a href="#topic-3"><i class="fa fa-road"></i><span>Roadmap</span><tooltip class="is-collapsed">Roadmap</tooltip></a></li>
+         <li><a href="#topic-3"><i class="fa fa-flag"></i><span>Milestones</span><tooltip class="is-collapsed">Milestones</tooltip></a></li>
+
+        
+      </ul>
+    </nav>
+
+  </div>
+  
+</body>
+
+<script src="/static/js/index.js"></script>
+<script src="/static/vendor/fullcalendar-6.1.5/index.global.min.js"></script>
+<script src="/static/js/calendar.js"></script>
+
 </html>
