add events feed

--- a/backend/src/static/css/calendar.css
+++ b/backend/src/static/css/calendar.css
@@ -6,3 +6,43 @@
 main {
   position:relative;
 }
+.fc-daygrid-event-harness:hover .event_tooltip{
+  visibility: visible;
+  opacity: 1;
+}
+
+
+/*
+.fc-daygrid-event{
+  position: relative;
+  z-index: 0;
+  opacity: 0.5;
+}*/
+.event_tooltip {
+  visibility: visible;
+  width: 200px;
+  height: 100px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1111;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -60px;
+  opacity: 1;
+  transition: opacity 0.3s;
+}
+
+.event_tooltip::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
