--- a/backend/src/static/css/calendar.scss
+++ b/backend/src/static/css/calendar.scss
@@ -1,38 +1,39 @@
 #calendar {
-  width: 100%;
+  width:100%;
   height: 100%;
 }
 
 main {
-  position: relative;
+  position:relative;
 }
-
-.fc-daygrid-event-harness:hover .event_tooltip {
+.fc-daygrid-event-harness:hover .event_tooltip{
   display: block;
 }
 
-.fc-daygrid-event {
-  position: static;
+.fc-daygrid-event{
+  position:static;
   z-index: 0;
-}
 
+}
 .event_tooltip {
   display: none;
+
   width: 35vw;
   height: 60vh;
+
   text-align: center;
   padding: 5px 0;
   position: absolute;
   z-index: 1111;
-  left: 100%;
-  top: 0%;
+  left:100%;
+  top:0%;
+
   margin-bottom: -1px;
 }
 
-.fc-scrollgrid {
-  z-index: 1;
+.fc-scrollgrid{
+z-index: 1;
 }
-
 /* Tooltip arrow 
 .event_tooltip::after {
   content: "";
@@ -44,4 +45,7 @@ main {
   border-style: solid;
   border-color: #555 transparent transparent transparent;
 }
-*//*# sourceMappingURL=calendar.css.map */
+*/
+
+
+
