--- a/backend/src/templates/index.html
+++ b/backend/src/templates/index.html
@@ -10,9 +10,22 @@
 <link rel="stylesheet" href="/static/css/calendar.css">
 <body>
   <div class="flex-container">
-    <main class="main">
-       <div id="calendar"></div>
+    
+    <main
+        class="main">
+        <div id="calendar"></div>
+        <!-- 
+        <div class="card">
+            <div class="card_title">Card</div>
+            <hr/>
+            <div class="card_body">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
+            </div>
+        </div>
+        -->
     </main>
+
     <nav id="sidebar">
 
       <ul>
@@ -20,7 +33,7 @@
         <li><a href="#topic-3"><i class="fa fa-th"></i><span>Dashboards</span><tooltip class="is-collapsed">Dashboards</tooltip></a></li>
         <li><a href="#topic-3"><i class="fa fa-signal"></i><span>Statistics</span><tooltip class="is-collapsed">Statistics</tooltip></a></li>
         <li><a href="#topic-3"><i class="fa fa-road"></i><span>Roadmap</span><tooltip class="is-collapsed">Roadmap</tooltip></a></li>
-         <li><a href="#topic-3"><i class="fa fa-flag"></i><span>Milestones</span><tooltip class="is-collapsed">Milestones</tooltip></a></li>
+        <li><a href="#topic-3"><i class="fa fa-flag"></i><span>Milestones</span><tooltip class="is-collapsed">Milestones</tooltip></a></li>
 
         
       </ul>
