--- a/backend/src/static/css/calendar.css
+++ b/backend/src/static/css/calendar.css
@@ -9,6 +9,8 @@ main {
 
 .fc-daygrid-event-harness:hover .event_tooltip {
   display: block;
+  visibility: visible;
+  cursor: default;
 }
 
 .fc-daygrid-event {
@@ -18,6 +20,8 @@ main {
 
 .event_tooltip {
   display: none;
+  white-space: pre-wrap;
+  text-decoration: none;
   width: 35vw;
   height: 60vh;
   text-align: center;
