--- a/backend/src/static/css/index.scss
+++ b/backend/src/static/css/index.scss
@@ -107,6 +107,7 @@ nav {
   border-radius: $el_size;
   border: solid $color;
   flex-direction: column;
+  word-wrap: break-word; 
   hr{
     display: block;
     border: none;
@@ -114,10 +115,18 @@ nav {
     background-color: $color-l;
     margin: 0px;
 }
+.card_title{
+  padding: 0  $el_size/2  $el_size/2  $el_size/2;
+}
 .card_body{
   overflow-x: hidden;
   overflow-y: auto;
-  margin-bottom: $el_size/4;
+  //margin-bottom: $el_size/4;
+  padding: $el_size/2;
+  text-align: left;
+  width: 100%;
+  height: 100%;
+ 
  
 }
 }
