--- a/backend/src/templates/calendar.html
+++ b/backend/src/templates/calendar.html
@@ -11,18 +11,11 @@
 <body>
   <div class="flex-container">
     
-    <main class="main">
-      <div id="top_menu">
-        hhhhhh
-        
-               </div>
-               <div id="content">
-                hhhhhh2
-                
-                       </div>
+    <main
+        class="main">
        
         
-         
+        <div id="calendar"></div>  
         <!-- 
         <div class="card">
             <div class="card_title">Card</div>
