--- a/backend/src/static/css/index.css
+++ b/backend/src/static/css/index.css
@@ -19,21 +19,40 @@ a {
 .flex-container {
   display: flex;
   flex-direction: row;
+  margin-top: 0;
   height: 100%;
 }
 
 main {
   width: 100%;
+  height: 100%;
   order: 2;
   background-color: #f1f2f9;
-  padding: 10px;
+  margin-top: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+#top_menu {
+  width: 100%;
+  height: 10vmin;
+  background-color: blue;
+  color: red;
+}
+
+#content {
+  height: 100%;
+  padding: 5px;
+  background-color: aquamarine;
+  color: red;
 }
 
 nav {
   order: 1;
   background: #222e3c;
   flex-shrink: 0;
-  margin-top: 0;
+  margin-right: 2px;
 }
 nav ul {
   list-style: none;
